syntax = "proto3";
option java_multiple_files = true;
package com.bilgeadam.banking;


service AccountService {
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}

message GetBalanceRequest {
  string accountNumber = 1;
}

message GetBalanceResponse {
  string balance = 1;
}

